ci: log into Lambda

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,6 +18,15 @@ jobs:
       - uses: actions/checkout@v4
       - run: zip lambda-function.zip *.py *.html
 
+      # Log into AWS.
+      - uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: ${{ vars.AWS_REGION }}
+          role-to-assume: ${{ secrets.IAM_ROLE_TO_ASSUME || null }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID || null }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY || null }}
+          role-skip-session-tagging: true
+
       # Initialize OpenTofu and deploy the stack.
       - uses: opentofu/setup-opentofu@v1.0.2
       - run: tofu init
@@ -25,7 +34,7 @@ jobs:
       - id: plan
         run: tofu plan -out terraform.tfplan -detailed-exitcode -no-color
         env:
-          TF_VAR_STACK_NAME: my-scoreboard
+          TF_VAR_STACK_NAME: simple-scoreboard
           TF_VAR_TAGS_ALL: |
             {"Environment": "Development", "Service": "Scorekeeping"}
       - if: steps.plan.outputs.exitcode == 2
